Use visibility property instead of display property to show tooltip. That way we can measure tooltip's offsetWidth before we show it and avoid the flicker that was seen on Linux Firefox before the tooltip was repositioned.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -635,7 +635,8 @@ div.dh-person-header-title {
 
 .dh-tooltip {
     position:			absolute;
-    display:            none;
+    visibility:         hidden;
+    display:            block;
 	z-index:			2;    
 }
 
